polish names again; certificate to avoid windows app smart control